[tool.poetry]
name = "koh"
version = "0.2.0"
description = "Liveness validator"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "2.5.1"
redis = "4.3.4"
aiohttp = "3.8.1"
jwt = "1.3.1"
aioboto3 = "9.3.1"

[tool.poetry.dev-dependencies]


[[tool.poetry.source]]
name = "etria_logger"
url = "https://backend:dc222fa6-452f-4253-a2fd-a52e7ba2e7e9@nexus.sigame.com.br/repository/pypi/simple"


[[tool.poetry.source]]
name = "mnemosine"
url = "https://backend:dc222fa6-452f-4253-a2fd-a52e7ba2e7e9@nexus.sigame.com.br/repository/pypi/simple"


[build-system]
requires = ["poetry-core==1.0.4"]
build-backend = "poetry.core.masonry.api"
