[tool.poetry]
name = "koh"
version = "0.2.2"
description = "Liveness validator"
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "nexus"
url = "https://backend:dc222fa6-452f-4253-a2fd-a52e7ba2e7e9@nexus.sigame.com.br/repository/pypi/simple"
secondary=true

[tool.poetry.dependencies]
python = "^3.8"
motor = "2.*"
redis = "4.*"
aiohttp = "3.*"
jwt = "1.*"
aioboto3 = "9.*"
etria-logger = "0.1.*"
mnemosine = "0.*"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core==1.0.4"]
build-backend = "poetry.core.masonry.api"
